[gd_scene load_steps=2 format=3 uid="uid://byt83uw26hb28"]

[ext_resource type="Script" path="res://Menu/menu.gd" id="1_vj4wh"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(1, 1.00496)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_vj4wh")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 22.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
use_top_left = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Jogar"

[node name="Instructions" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Instruções"

[node name="Credits" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Creditos"

[node name="Quit" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Instructions" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Credits" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
